--- a/training/src/system/external/half/CMakeLists.txt
+++ b/training/src/system/external/half/CMakeLists.txt
@@ -20,16 +20,7 @@ endif ()
 include(FetchContent)
 
 set(FETCHCONTENT_UPDATES_DISCONNECTED ON)
-execute_process(COMMAND mkdir -p ${PROJECT_SOURCE_DIR}/cache)
-if (EXISTS ${BOLT_ROOT}/third_party/sources/half-2.2.0.zip)
-    file(COPY ${BOLT_ROOT}/third_party/sources/half-2.2.0.zip DESTINATION ${PROJECT_SOURCE_DIR}/cache)
-else ()
-    execute_process(COMMAND wget --no-check-certificate https://telkomuniversity.dl.sourceforge.net/project/half/half/2.2.0/half-2.2.0.zip WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/cache)
-    if (EXISTS ${BOLT_ROOT}/third_party/sources)
-        file(COPY ${PROJECT_SOURCE_DIR}/cache/half-2.2.0.zip DESTINATION ${BOLT_ROOT}/third_party/sources/)
-    endif ()
-endif ()
-FetchContent_Declare(half URL ${PROJECT_SOURCE_DIR}/cache/half-2.2.0.zip)
+FetchContent_Declare(half URL https://telkomuniversity.dl.sourceforge.net/project/half/half/2.2.0/half-2.2.0.zip)
 
 FetchContent_GetProperties(half)
 if (NOT half_Target_POPULATED)
@@ -38,5 +29,3 @@ if (NOT half_Target_POPULATED)
     add_library(libhalf INTERFACE)
     target_include_directories(libhalf INTERFACE ${half_SOURCE_DIR}/include)
 endif ()
-
-execute_process(COMMAND rm -rf ${PROJECT_SOURCE_DIR}/cache)
